--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
 </head>
 <body onload = "initialize();">
     <div class = "container">
-        <img id = "1" src="../Level1JS.html/jail.png" backup = "../Level1JS.html/coin.jpg" flipped = "false">
-        <img id = "2" src="" backup = "" flipped = "false">
-        <img id = "3"src="" backup = "" flipped = "false">
-        <img id = "3" src="" backup = "" flipped = "false">
-        <img id = "5"src="" backup = "" flipped = "false">
-        <img id = "6" src="" backup = "" flipped = "false">
-        <img id = "7" src="" backup = "" flipped = "false">
-        <img id = "8" src="" backup = "" flipped = "false">
-        <img id = "9" src="" backup = "" flipped = "false">
-        <img id = "10" src="" backup = "" flipped = "false">
-        <img id = "11"src="" backup = "" flipped = "false">
-        <img id = "12" src="" backup = "" flipped = "false">
-        <img id = "13" src="" backup = "" flipped = "false">
-        <img id = "14" src="" backup = "" flipped = "false">
-        <img id = "15" src="" backup = "" flipped = "false">
-        <img id = "16" src="" backup = "" flipped = "false">
+        <img id = "1" src="cardBack.PNG" backup = "bokkari.png" flipped = "false">
+        <img id = "2" src="cardBack.PNG" backup = "jiniret.png" flipped = "false">
+        <img id = "3" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "3" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "5" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "6" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "7" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "8" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "9" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "10" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "11" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "12" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "13" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "14" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "15" src="cardBack.PNG" backup = "" flipped = "false">
+        <img id = "16" src="cardBack.PNG" backup = "" flipped = "false">
     </div>
+    <div class = "score"> 
+        <div id = "score">Score: 0</div>
+        <button>Reset</button>
+    </div>
+    
 </body>
 </html>
