--- a/homepage.html
+++ b/homepage.html
@@ -4,53 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
-    <style>
-        body {
-            background-color: rgb(193, 202, 222);
-        }
-        h1 {
-            font-family: "Lucida Console", 	"Courier New", monospace;
-            font-size: 60px;
-            letter-spacing: 1px;
-            text-align: center;
-            font-weight: bold;
-            color: rgb(118, 120, 230);
-        }
+    <style> 
+        @media (min-width: 1025px){       
+            body {
+                background-color: rgb(193, 202, 222);
+            }
+            h1 {
+                font-family: "Lucida Console", 	"Courier New", monospace;
+                font-size: 60px;
+                letter-spacing: 1px;
+                text-align: center;
+                font-weight: bold;
+                color: rgb(118, 120, 230);
+            }
 
-        h3 {
-            font-family: "Lucida Console", 	"Courier New", monospace;
-            font-size: 40px;
-            font-weight: bold;
-            letter-spacing: 1px;
-            text-align: center;
-            color: rgb(128, 139, 216);
-        }
+            h3 {
+                font-family: "Lucida Console", 	"Courier New", monospace;
+                font-size: 40px;
+                font-weight: bold;
+                letter-spacing: 1px;
+                text-align: center;
+                color: rgb(128, 139, 216);
+            }
 
-        .buttons {
-            text-align: center;
-        }
+            .buttons {
+                text-align: center;
+            }
 
-        .button {
-            font-family: "Lucida Console", 	"Courier New", monospace;
-            letter-spacing: 1px;
-            font-weight: bold;
-            font-size: 50px;
-            border: 3px solid rgba(255, 255, 255);
-            background-color: rgb(74, 84, 137);
-            box-shadow: 1px 1px 2px rgba(49, 49, 185);
-            color: rgb(157, 164, 199);
-            border-radius: 10px 10px;
-            padding: 10px;
-            cursor: pointer;
-        }
+            .button {
+                font-family: "Lucida Console", 	"Courier New", monospace;
+                letter-spacing: 1px;
+                font-weight: bold;
+                font-size: 50px;
+                border: 3px solid rgba(255, 255, 255);
+                background-color: rgb(74, 84, 137);
+                box-shadow: 1px 1px 2px rgba(49, 49, 185);
+                color: rgb(157, 164, 199);
+                border-radius: 10px 10px;
+                padding: 10px;
+                cursor: pointer;
+            }
 
-        footer {
-            font-family: "Lucida Console", 	"Courier New", monospace;
-            font-size: 20px;
-            font-weight: bold;
-            text-align: center;
-            color: rgb(115, 107, 191);
-            padding-top: 330px;
+            footer {
+                font-family: "Lucida Console", 	"Courier New", monospace;
+                font-size: 20px;
+                font-weight: bold;
+                text-align: center;
+                color: rgb(115, 107, 191);
+                padding-top: 330px;
+            }
         }
     </style>
 </head>
