--- a/homepage.html
+++ b/homepage.html
@@ -61,7 +61,7 @@
     <h3>Flip and match all the cards corrently to end the game!</h3>
     </br></br></br></br>
     <div class="buttons">
-        <button class="button" onclick="window.location.href='homepage.html';">Start</button>
+        <button class="button" onclick="window.location.href='game.html';">Start</button>
     </div>
     <footer>2023 &copy; Dicky Chen - Winnie Chan - Anna Vasetskaya</footer>
 </body>
